# DXBridge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  releases.yml  security.yml
cmake/: CompilerFlags.cmake  FindWindowsSDK.cmake
docs/: api-reference.md  architecture.md  build-and-test.md  examples.md  integration-guide.md  license-policy.md
docs/releases/: v1.3.0-compatible-design.md  v1.3.0-publishing-checklist.md  v1.3.0-release-notes.md  v1.3.0-scope.md  verify-artifacts.md
examples/: CMakeLists.txt  README.md  run_capability_preflight.ps1
examples/bun/: README.md  dxbridge.ts  example01_load_version_logs.ts  example02_enumerate_adapters.ts  example03_create_device_errors.ts  example04_dx11_clear_window.ts  example05_dx11_triangle.ts  example06_capability_preflight.ts  win32.ts
examples/csharp/: README.md  build.bat  run_example.bat
examples/csharp/src/: Program.cs
examples/csharp/src/dxbridge/: CommandLine.cs  DXBridge.cs  DXBridgeException.cs  DXBridgeNative.cs  Win32Window.cs
examples/csharp/src/examples/: Example01LoadVersionLogs.cs  Example02EnumerateAdapters.cs  Example03CreateDeviceErrors.cs  Example04Dx11ClearWindow.cs  Example05Dx11MovingTriangle.cs
examples/go/: README.md  build.bat  go.mod  run_example.bat
examples/go/cmd/example01_load_version_logs/: main.go
examples/go/cmd/example02_enumerate_adapters/: main.go
examples/go/cmd/example03_create_device_errors/: main.go
examples/go/cmd/example04_dx11_clear_window/: main.go
examples/go/cmd/example05_dx11_moving_triangle/: main.go
examples/go/cmd/example06_capability_preflight/: main.go
examples/go/internal/dxbridge/: dxbridge.go  win32.go
examples/hello_triangle/: README.md  main_dx11.cpp  main_dx12.cpp
examples/java/: README.md  build.bat  fetch_deps.bat  run_example.bat
examples/java/src/dxbridge/: CommandLine.java  DXBridge.java  DXBridgeException.java  DXBridgeLibrary.java  Win32Window.java
examples/java/src/examples/: Example01LoadVersionLogs.java  Example02EnumerateAdapters.java  Example03CreateDeviceErrors.java  Example04Dx11ClearWindow.java  Example05Dx11MovingTriangle.java
examples/nodejs/: README.md  dxbridge.js  example01_load_version_logs.js  example02_enumerate_adapters.js  example03_create_device_errors.js  example04_dx11_clear_window.js  example05_dx11_triangle.js  example06_capability_preflight.js  package-lock.json  package.json  win32.js
examples/python/: README.md  dxbridge_ctypes.py  example_01_load_version_logs.py  example_02_enumerate_adapters.py  example_03_create_device_errors.py  example_04_dx11_clear_window.py  example_05_dx11_moving_triangle.py  example_06_capability_preflight.py
examples/rust/: Cargo.toml  README.md  build.bat  run_example.bat
examples/rust/src/: cli.rs  dxbridge.rs  lib.rs  win32.rs
include/dxbridge/: dxbridge.h  dxbridge_version.h
scripts/: run-ctest.ps1  run-runtime-validation.ps1  verify-version.ps1
src/: capability_query.cpp  dxbridge.cpp  dxbridge.def
src/common/: backend.hpp  error.cpp  error.hpp  format_util.hpp  handle_table.cpp  handle_table.hpp  log.cpp  log.hpp
src/dx11/: buffer_dx11.cpp  device_dx11.cpp  device_dx11.hpp  pipeline_dx11.cpp  render_dx11.cpp  shader_dx11.cpp  swapchain_dx11.cpp
src/dx12/: buffer_dx12.cpp  device_dx12.cpp  device_dx12.hpp  pipeline_dx12.cpp  render_dx12.cpp  shader_dx12.cpp  swapchain_dx12.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: headless_triangle_dx11.cpp  headless_triangle_dx12.cpp
tests/unit/: test_capability_discovery.cpp  test_dx11_validation.cpp  test_dx12_validation.cpp  test_error_mapping.cpp  test_handle_table.cpp  test_public_abi_contract.cpp
